updated home Images

--- a/home.html
+++ b/home.html
@@ -24,11 +24,11 @@
     <section class="features">
         <div class="container">
         <div class="feature">
-            <img src="image/realtime.png" alt=""/>
+            <img src="Image/realtime.png" alt=""/>
             <p>Real-time price update</p>
         </div>
         <div class="feature">
-            <img src="image/fundamental.png" alt=""/>
+            <img src="Image/fundamental.png" alt=""/>
             <p>Fundamental Analysis</p>
         </div>
         <div class="feature">
