added google verification

--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <meta name="google-site-verification" content="kF6i33VkCjG5wSZBBGghB1HM-jQsglBrW6eEMWq94wg" />
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript" src="main.js"></script>
         <link rel="stylesheet" href="main.css">
